新增 admin监控中心

--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -168,7 +168,7 @@
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>角色管理</cite></a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a onclick="xadmin.add_tab('权限分类','admin-cate.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>权限分类</cite></a>
@@ -177,7 +177,7 @@
                                 <a onclick="xadmin.add_tab('权限管理','admin-rule.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>权限管理</cite></a>
-                            </li>
+                            </li>-->
                         </ul>
                     </li>
 
@@ -211,6 +211,11 @@
                                 <a href="http://39.106.116.185:8080/" target="_blank">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>CI/CD平台</cite></a>
+                            </li>
+                            <li>
+                                <a href="http://39.102.34.165:8369/" target="_blank">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>监控平台</cite></a>
                             </li>
                             <!--<li>
                                 <a onclick="xadmin.add_tab('更新日志','log.html')">
