--- a/web/src/main/resources/templates/file-recycle.html
+++ b/web/src/main/resources/templates/file-recycle.html
@@ -29,7 +29,7 @@
                                    <input class="layui-input" autocomplete="off" placeholder="截止日" name="end" id="end">
                               </div>
                               <div class="layui-inline layui-show-xs-block">
-                                   <input type="text" name="username" placeholder="请输入井名称" autocomplete="off"
+                                   <input type="text" name="username" placeholder="请输入文件名称" autocomplete="off"
                                           class="layui-input">
                               </div>
                               <div class="layui-inline layui-show-xs-block">
