--- a/web/src/main/resources/templates/file-upload.html
+++ b/web/src/main/resources/templates/file-upload.html
@@ -8,12 +8,12 @@
     <div class="layui-row">
         <form class="layui-form">
             <div class="layui-form-item">
-                <!--<label for="file" class="layui-form-label">-->
-                    <!--<span class="x-red">*</span>选择上传文件-->
-                <!--</label>-->
+                <label for="file" class="layui-form-label">
+                    <span class="x-red">*</span>选择上传文件
+                </label>
                 <div class="layui-input-inline">
                     <input type="file" id="file" name="file" required="" lay-verify="file"
-                           autocomplete="off" class="layui-upload-file">
+                           autocomplete="off" class="">
                 </div>
                 <div class="layui-form-mid layui-word-aux">
                     <span class="x-red">*</span>
