文件导出 暂不可用 套管排序 暂无页面渲染

--- a/web/src/main/resources/templates/well-info-list.html
+++ b/web/src/main/resources/templates/well-info-list.html
@@ -38,7 +38,8 @@
                 </div>
                 <div class="layui-card-header">
                     <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-                    <button class="layui-btn" onclick="xadmin.open('添加角色','/wellAddPage',650,400)"><i class="layui-icon"></i>添加</button>
+                    <button class="layui-btn" onclick="xadmin.open('添加油井信息','/wellAddPage',650,400)"><i class="layui-icon"></i>添加</button>
+                    <button class="layui-btn" onclick="xadmin.open('数据导出','/excelExport',650,400)"><i class="layui-icon"></i>数据导出</button>
                 </div>
                 <div class="layui-card-body ">
                     <table class="layui-table layui-form">
