--- a/web/src/main/resources/templates/gun-add.html
+++ b/web/src/main/resources/templates/gun-add.html
@@ -56,7 +56,8 @@
         </form>
     </div>
 </div>
-<script>layui.use(['form', 'layer'],
+<script>
+    layui.use(['form', 'layer'],
     function() {
         $ = layui.jquery;
         var form = layui.form,
